finished testing driver

--- a/a0/makefile
+++ b/a0/makefile
@@ -1,7 +1,9 @@
 all:
 	g++ my_rec_minmax.cpp -o recminmax
 	g++ my_iter_minmax.cpp -o iterminmax
+	g++ testingdriver.cpp -o test -fpermissive
 clean: 
 	rm recminmax
 	rm iterminmax
-	
+	rm test
+	rm out.dat
