added Readme and license

--- a/a2/Makefile
+++ b/a2/Makefile
@@ -1,8 +1,8 @@
 CC = g++
 
 # choose one of three tree flavors
-TREE_FLAVOR = -DTEST_BST 
-#TREE_FLAVOR = -DTEST_AVL
+#TREE_FLAVOR = -DTEST_BST 
+TREE_FLAVOR = -DTEST_AVL
 #TREE_FLAVOR = -DTEST_SPLAY
 
 DEBUG_FLAG = -DMAIN_ECHO #-DDEBUG_ECHO
